@@ -17,7 +17,7 @@ nodist_include_HEADERS := $(wildcard *.mod)
 AM_FCFLAGS = $(F90_MODFLAG)../libglimmer
 CLEANFILES = *.$(F90_MODULE_EXTENSION) 
 
-f90_dep.mak:	$(srcdir)/*.F90 $(BUILT_SOURCES) glimmer_vers.F90
+f90_dep.mak:	$(srcdir)/*.F90 $(BUILT_SOURCES)
 		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -l -o $@ $^
 
 -include f90_dep.mak
